apps/headlamp/app/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ports:
    - port: 80
      targetPort: 4466
  selector:
    k8s-app: headlamp
