apps/headlamp/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: headlamp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "headlamp.hoytlabs.app"
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "headlamp.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
          weight: 1
